# ppe_detection

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt  run_inference.bat
app/: dashboard.py
config/: config.yaml
data/Construction Site.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
data/Construction Site.v1i.yolov8/test/labels/: 5.rf.8f37f93f7bf5c73a52e82ffd4fcacb18.txt  62.rf.58f3c535d23d7ce3ba7107bbb8cfef5e.txt  65.rf.73a57ef991b4f7be841ae79df31ed16d.txt  69_jpeg.rf.880078e34279e1c6ba4dee859ab89657.txt  73_jpeg.rf.0def62294b40280b2f3a69d2334f6ef3.txt  85_jpeg.rf.39560141848e5cbdfe5df75b7ef100cb.txt  88_jpeg.rf.b5481bf29411f5ccd98e3a8cace1dde7.txt  89_jpeg.rf.ab754eed81031cd152e8cf7644ae81ca.txt
data/Construction Site.v1i.yolov8/train/labels/: 1.rf.dcb67678cf1736aee5742f06750116c6.txt  100.rf.8b09c54b08db9ecf1c3de29f96a5f3e8.txt  101_jpeg.rf.c10d7d5aa02ff7cb8e6aeb5d2ade3f3c.txt  103_jpeg.rf.ddae0762521d8e2149dbb0f86fe4420a.txt  104.rf.ef87c279836f506b1724644d5246ac41.txt  10_jpeg.rf.1e45914ddc2853aeb3f08d29977234b9.txt  11_jpeg.rf.76974d623e308dd32359623764a652d8.txt  12.rf.b231fddd2d89adff6cae2549ea29bfec.txt  13.rf.28115425d0da61b88e65be89378335c3.txt  14_jpeg.rf.2e845445066bc8757f574ed23b6bb789.txt  15_jpeg.rf.2ee8957f562c684865abffed2a3c3af4.txt  16_jpeg.rf.c1e71fbf40773a71dbe19eb1d4209ba3.txt  17.rf.ec34666c101d3031293d3ab89863ff62.txt  20.rf.832225703633091ae29a4d400df81eb9.txt  (+61 more)
src/: __init__.py  __main__.py  detector.py  inference.py  processor.py  train.py  utils.py  violation_logic.py
(+19 files in other folders)
